[gd_scene load_steps=8 format=2]

[ext_resource path="res://MiscRelated/FontRelated/FontRes/monogram_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://MiscRelated/FontRelated/Fonts/LcdSolid/LcdSolid-VPzB.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/PlayerGUI_HOptionSelector.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameSaveRelated/GUIs/GameSettingsRelated/AssistModePanel/Subs/AssistModeMainPanel/AssistModeMainPanel.gd" type="Script" id=4]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_CheckboxStandard/PlayerGUI_CheckboxStandard.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameSaveRelated/GUIs/GameSettingsRelated/AssistModePanel/CommonAssets/AssistModeIcon_75x75.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[node name="AssistModeMainPanel" type="MarginContainer"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.5
margin_top = -184.5
margin_right = 249.5
margin_bottom = 184.5
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_left = 87.0
margin_right = 412.0
margin_bottom = 75.0
size_flags_horizontal = 6
custom_constants/separation = 30

[node name="AssistModeIcon" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 75.0
texture = ExtResource( 6 )

[node name="HeaderLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 325.0
margin_bottom = 75.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Assist Mode
Settings"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
margin_top = 125.0
margin_right = 499.0
margin_bottom = 375.0
custom_constants/separation = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer/VBoxContainer"]
margin_right = 499.0
margin_bottom = 32.0

[node name="EnableAssistModeCheckbox" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
margin_right = 209.0
size_flags_horizontal = 3
update_properties_when_clicked_instead_of_reactive = false
label_text = "Enable:"

[node name="HBoxContainer" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/EnableAssistModeCheckbox" index="0"]
margin_right = 209.0

[node name="CheckboxLabel" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/EnableAssistModeCheckbox/HBoxContainer" index="0"]
margin_top = 5.0
margin_right = 84.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Enable:"

[node name="Container" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/EnableAssistModeCheckbox/HBoxContainer" index="1"]
margin_left = 98.0
margin_right = 130.0

[node name="Button" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/EnableAssistModeCheckbox" index="1"]
margin_right = 209.0

[node name="AssistModeToggleCheckbox" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
margin_left = 213.0
margin_right = 499.0
size_flags_horizontal = 3
update_properties_when_clicked_instead_of_reactive = false
label_text = "For This Level Only:"

[node name="HBoxContainer" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/AssistModeToggleCheckbox" index="0"]
margin_right = 286.0

[node name="CheckboxLabel" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/AssistModeToggleCheckbox/HBoxContainer" index="0"]
margin_top = 5.0
margin_right = 240.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "For This Level Only:"

[node name="Container" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/AssistModeToggleCheckbox/HBoxContainer" index="1"]
margin_left = 254.0
margin_right = 286.0

[node name="Button" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer2/AssistModeToggleCheckbox" index="1"]
margin_right = 286.0
focus_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 499.0
margin_bottom = 250.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 40

[node name="VBoxName" type="VBoxContainer" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 296.0
margin_bottom = 188.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Label_AdditionalEnergy" type="Label" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxName"]
margin_top = 5.0
margin_right = 296.0
margin_bottom = 27.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Additional Energy:"
valign = 1

[node name="Label_EnergyReduc" type="Label" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxName"]
margin_top = 57.0
margin_right = 296.0
margin_bottom = 79.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Infinite Energy:"
valign = 1

[node name="Label_AdditionalLaunchBall" type="Label" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxName"]
margin_top = 109.0
margin_right = 296.0
margin_bottom = 131.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Additional Launch Balls:"
valign = 1

[node name="Label_PauseAtESC" type="Label" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxName"]
margin_top = 161.0
margin_right = 296.0
margin_bottom = 183.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Pause at Escape Menu:"
valign = 1

[node name="VBoxHOption" type="VBoxContainer" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 499.0
margin_bottom = 188.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.55
custom_constants/separation = 20

[node name="HOption_AdditionalEnergy" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxHOption" instance=ExtResource( 3 )]
margin_right = 163.0
update_properties_when_clicked_instead_of_reactive = false

[node name="HOption_EnergyReduc" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxHOption" instance=ExtResource( 3 )]
margin_top = 52.0
margin_right = 163.0
margin_bottom = 84.0
update_properties_when_clicked_instead_of_reactive = false

[node name="HOption_AdditionalLaunchBall" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxHOption" instance=ExtResource( 3 )]
margin_top = 104.0
margin_right = 163.0
margin_bottom = 136.0
update_properties_when_clicked_instead_of_reactive = false

[node name="HOption_PauseAtESC" parent="Control/VBoxContainer/VBoxContainer/HBoxContainer/VBoxHOption" instance=ExtResource( 3 )]
margin_top = 156.0
margin_right = 163.0
margin_bottom = 188.0
update_properties_when_clicked_instead_of_reactive = false

[node name="RestartLabel" type="Label" parent="Control"]
margin_left = 209.0
margin_top = 497.0
margin_right = 751.0
margin_bottom = 512.0
custom_colors/font_color = Color( 1, 0.65098, 0.2, 1 )
text = "Changes detected! Restart level to take effect."
align = 1

[node name="NotAllUnlockedLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -279.0
margin_top = 36.0
margin_right = 279.0
margin_bottom = 51.0
custom_colors/font_color = Color( 1, 0.65098, 0.2, 1 )
text = "Note: Some features are still locked. Play more to unlock all."
align = 1

[connection signal="pressed__intent_for_reactive" from="Control/VBoxContainer/VBoxContainer/HBoxContainer2/EnableAssistModeCheckbox" to="." method="_on_EnableAssistModeCheckbox_pressed__intent_for_reactive"]
[connection signal="pressed__intent_for_reactive" from="Control/VBoxContainer/VBoxContainer/HBoxContainer2/AssistModeToggleCheckbox" to="." method="_on_AssistModeToggleCheckbox_pressed__intent_for_reactive"]

[editable path="Control/VBoxContainer/VBoxContainer/HBoxContainer2/EnableAssistModeCheckbox"]
[editable path="Control/VBoxContainer/VBoxContainer/HBoxContainer2/AssistModeToggleCheckbox"]
